--- a/lang/en.json
+++ b/lang/en.json
@@ -1,1 +1,9 @@
-{}
+{
+
+  "HQ.EffectCreate": "Create Effect",
+  "HQ.EffectToggle": "Toggle Effect",
+  "HQ.EffectEdit": "Edit Effect",
+  "HQ.EffectDelete": "Delete Effect",
+
+  "HQ.Add": "Add"
+}
